--- a/proizvod/mainpage/templates/mainpage/main_page.html
+++ b/proizvod/mainpage/templates/mainpage/main_page.html
@@ -235,7 +235,7 @@
               <button class="aitu-card-button" onclick="window.location.href='/map/'">Открыть</button>
             </div>
             <div class="aitu-card-image">
-                <button>
+                <button onclick="window.location.href='/map/'">
                     <img src="/static/mainpage/img/mapimapi.png" alt="карта">
                 </button>
               <div class="aitu-placeholder"></div>
