--- a/proizvod/userpage/static/userpage/css/profile.css
+++ b/proizvod/userpage/static/userpage/css/profile.css
@@ -11,10 +11,9 @@
 /* Общие стили */
 body {
   margin: 0;
-  font-family: 'Candara';
+  font-family: 'Candara', sans-serif;
   height: 100vh;
   display: flex;
-  justify-content: center;
   background: linear-gradient(180deg, rgba(47, 52, 105, 0.9), rgba(134, 141, 212, 0.9));
   color: white;
 }
@@ -26,8 +25,281 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('/static/eventpage/img/IMG_7283.PNG') no-repeat center center;
+  background: url('/static/userpage/img/starrs.PNG') no-repeat center center;
   background-size: cover;
   z-index: -1;
   opacity: 1;
 }
+
+header {
+  position: absolute;
+  top: 7%;
+  left: 5%;
+}
+
+h2 {
+  font-family: 'Hagrid';
+  font-size: 40px;
+  font-weight: bold;
+  position: absolute;
+  top: 2%;
+  left: 14%;
+}
+
+.profile-section {
+  text-align: center;
+  position: absolute;
+  bottom: 10%;
+  left: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
+.profile-picture img {
+ max-width: 320px;
+ max-height: 320px;
+}
+
+.profile-picture {
+  margin: 0 auto 10px;
+  position: absolute;
+  top: 25%;
+  left: 19.5%;
+}
+
+.info-section {
+ position: absolute;
+ top: 14.5%;
+ right: 12%;
+}
+
+.info-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.form-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.action-button {
+  padding: 20px;
+  border: 1.4px solid white;
+  border-radius: 20px;
+  background: #868DD4;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease;
+}
+
+.info-item:hover .action-button {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+#add {
+  background: #2F3469;
+}
+
+.logout-button,
+.delete-button {
+  width: 300px;
+  height: 70px;
+  margin-bottom: 10px;
+  border-radius: 50px;
+  font-size: 24px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.delete-button:hover {
+    background: #9FA5EB;
+    opacity: 0.9;
+}
+
+.logout-button {
+  background: #868DD4;
+  border: 1.4px solid white;
+  color: white;
+}
+
+.delete-button {
+  background: #2F3469;
+  border: 1.4px solid white;
+  color: white;
+  width: 100%;
+  transition: 0.4s ease;
+}
+
+.data {
+ font-size: 24px;
+ padding: 20px;
+ border: 2px solid white;
+ border-radius: 35px;
+ width: 500px;
+ margin-bottom: 5px;
+ margin-right: 20px;
+}
+
+.inf-desc {
+ font-size: 20px;
+ font-weight: bold;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.3s ease-out;
+}
+
+.modal.show {
+    visibility: visible;
+    z-index: 100;
+    opacity: 1;
+}
+
+.modal .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 0;
+}
+
+.modal-window {
+    position: relative;
+    z-index: 2;
+    width: 825px;
+    height: 600px;
+    border-radius: 20px;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
+    background: linear-gradient(180deg, rgb(47, 52, 105), rgb(134, 141, 212));
+    color: white;
+    padding: 20px;
+    overflow: hidden;
+}
+
+.close-window {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    border: none;
+    background: none;
+    opacity: 0.6;
+    color: white;
+    font-size: 32px;
+    cursor: pointer;
+}
+
+.close-window:hover {
+    opacity: 1;
+}
+
+#wind .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  }
+
+#wind .container h2 {
+  font-size: 40px;
+  margin: 7% 14%;
+}
+
+#second-wind .container h2 {
+  font-size: 40px;
+  margin: 12% 15%;
+}
+
+.change-password form {
+  display: flex;
+  flex-direction: column; /* Вертикальное расположение элементов */
+  gap: 25px; /* Расстояние между элементами */
+  align-items: center; /* Центровка всех элементов формы */
+  margin-top: 35%;
+}
+
+#second-wind .change-password form {
+  margin-top: 25%;
+}
+
+/* Поля ввода */
+.change-password input {
+  padding: 20px;
+  border: 1.5px solid white;
+  border-radius: 25px;
+  background: transparent;
+  color: white;
+  font-family: 'Candara';
+  font-size: 20px;
+  width: 500px;
+  box-sizing: border-box;
+}
+
+input::placeholder {
+    color: #ffffff;
+  }
+
+input:focus {
+   outline: none;
+   box-shadow: none;
+}
+
+/* Кнопка */
+.change-password button {
+  margin-top: 5%;
+  padding: 10px 22px;
+  border: 1.5px solid white;
+  border-radius: 30px;
+  background-color: #868DD4;
+  color: white;
+  font-family: 'Candara';
+  font-size: 28px;
+  cursor: pointer;
+  transition: 0.3s;
+  width: 100%;
+  max-width: 300px;
+}
+
+.change-password button:hover {
+  background-color: #2F3469;
+}
+
+.messages{
+  font-family: Arial;
+  font-size: 0.9rem;
+  color: rgba(255, 255, 255, 0.9);
+  position: absolute;
+  top: 103%;
+  left: 2%;
+  }
