--- a/proizvod/eventpage/templates/eventpage/search.html
+++ b/proizvod/eventpage/templates/eventpage/search.html
@@ -30,7 +30,7 @@
                     </form>
                 </div>
                 <div class="city-select">
-                    <img src="/static/eventpage/img/СУКА.PNG" alt="Город" class="icon">
+                    <img src="/static/mainpage/img/location.PNG" alt="Город" class="icon">
                     <span class="city-text">ГОРОД</span>
                     <ul class="dropdown">
                         <li>Астана</li>
