--- a/proizvod/mainpage/static/mainpage/css/main_styles.css
+++ b/proizvod/mainpage/static/mainpage/css/main_styles.css
@@ -494,7 +494,7 @@ footer {
   }
 
   .footer-section ul li a:hover {
-    color: rgba(134, 141, 212);
+    color: #2F3469;
   }
 
   /* Копирайт */
